Fix T92645: Cycles OSL crash due use of uninitialized pointer

Thanks to Ilja Razinkov for identifying the problem and solution.